<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    android:background="@drawable/music_tile_style"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/musicicon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/music_app_icon"
        android:layout_margin="10dp"
        app:shapeAppearanceOverlay="@style/curved"/>

    <TextView
        style="@style/Base.Theme.MusicPlayer"
        android:id="@+id/musicname"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/songname"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:singleLine="true"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@+id/duration"
        android:layout_toEndOf="@+id/musicicon"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/artistname"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/artistname"
        android:textColor="@color/black"
        android:singleLine="true"
        android:layout_toStartOf="@+id/duration"
        android:layout_toEndOf="@+id/musicicon"
        android:layout_marginStart="5dp"
        android:layout_marginTop="38dp"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/duration"
        android:textColor="@color/black"
        android:singleLine="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>

</RelativeLayout>