<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/navigationBack"
            android:src="@drawable/ic_back"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:layout_weight="1"
            android:layout_marginEnd="45dp"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songIcon"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="40dp"
        android:src="@drawable/music_app_icon"
        app:shapeAppearanceOverlay="@style/curved"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/songName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/songname"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"/>
        <TextView
            android:id="@+id/songArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/artistname"
            android:singleLine="true"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/seekBarTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="30dp"
            android:text="@string/StartDuration"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/musicDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/EndDuration"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:icon="@drawable/ic_previous"
            app:iconSize="40dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:icon="@drawable/play_circle"
            app:iconSize="50dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:icon="@drawable/ic_next"
            app:iconSize="40dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

</LinearLayout>